<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/LinearLayoutAddSong"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorAccent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="5dp"
    android:paddingBottom="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/add_new_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_new_song"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etNameOfSinger"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="5dp"
                android:gravity="top|start"
                android:hint="@string/name_of_singer"
                android:textColor="@color/black"
                android:textColorHint="@android:color/black"
                android:inputType="text"
                android:autofillHints="text"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                android:textIsSelectable="true"
                app:boxStrokeColor="#696969"/>

            <EditText
                android:id="@+id/etNameOfSong"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="5dp"
                android:gravity="top|start"
                android:hint="@string/name_of_song"
                android:textColor="@color/black"
                android:textColorHint="@android:color/black"
                android:inputType="text"
                android:autofillHints="text"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                android:textIsSelectable="true"
                app:boxStrokeColor="#696969"/>


            <EditText
                android:id="@+id/etAlbum"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="5dp"
                android:gravity="top|start"
                android:hint="@string/number_of_album"
                android:textColor="@color/black"
                android:textColorHint="@android:color/black"
                android:inputType="number"
                android:autofillHints="number"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                android:textIsSelectable="true"
                app:boxStrokeColor="#696969"/>


            <EditText
                android:id="@+id/etLyrics"
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/lyrics"
                android:textColor="@color/black"
                android:textColorHint="@android:color/black"
                android:inputType="textMultiLine"
                android:singleLine="false"
                android:autofillHints="text"
                android:gravity="top|start"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                android:textIsSelectable="true"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                app:boxStrokeColor="#696969"/>

            <TextView
                android:id="@+id/tvExplanation"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="5dp"
                android:text="@string/youtube_url_code"
                android:textColor="@color/black"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:boxStrokeColor="#696969">
            </TextView>

            <EditText
                android:id="@+id/etYoutube"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="5dp"
                android:gravity="top|start"
                android:hint="@string/code"
                android:textColor="@color/black"
                android:textColorHint="@android:color/black"
                android:inputType="textUri"
                android:autofillHints="text"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                android:textIsSelectable="true"
                app:boxStrokeColor="#696969"/>

            <Button
                android:id="@+id/btnCamera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/rounded_button"
                android:text="@string/take_photo"
                android:textColor="@android:color/white" />

            <ImageView
                android:id="@+id/ivPhoto"
                android:layout_width="match_parent"
                android:layout_height="148dp"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/set_content_camera"
                app:srcCompat="@android:drawable/ic_menu_camera" />

        </LinearLayout>

        <Button
            android:id="@+id/btnAddSong"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_button"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnBackSong"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_button"
            android:onClick="finish"
            android:text="@string/back_add_song"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

    </LinearLayout>


</ScrollView>